Make experiment responsive

--- a/experiment/kahns-algorithm/simulation/topo_demo.html
+++ b/experiment/kahns-algorithm/simulation/topo_demo.html
@@ -13,7 +13,7 @@
       <li>Zoom or Adjust graph by dragging nodes according to your convience</li>  
     </div>
   </div> 
-  <div style="font-size: 1.5vw;">
+  <div>
     <p id="seq"><b>Selected Order : </b></p>
   </div>
   <center>   
@@ -45,7 +45,7 @@
   <script src="js/Algo.js"></script> 
   <script src="js/data.js"></script> 
   <link href="docs/static/libs/vis.min.css" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="../../assets/css/common-styles.css">
+<link rel="stylesheet" href="../../assets/css/common-styles-responsive.css">
   <script src="docs/static/libs/vis.anim.js"></script>
   <link href="css/mst.css" rel="stylesheet" type="text/css" />
   <script src="docs/static/libs/vis.anim.js"></script>
