--- a/experiment/kahns-algorithm/simulation/topo_exercise.html
+++ b/experiment/kahns-algorithm/simulation/topo_exercise.html
@@ -20,7 +20,7 @@
     company manager assign jobs in an order so that no
     employee needs to wait for other job to be done.
   </div>
-  <div style="font-size: 1.5vw;">
+  <div>
     <p id="seq"><b>Selected Order : </b></p>
   </div>
   <center>   
@@ -43,7 +43,7 @@
   <script src="js/Algo.js"></script> 
   <script src="js/data.js"></script> 
   <link href="docs/static/libs/vis.min.css" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="../../assets/css/common-styles.css">
+<link rel="stylesheet" href="../../assets/css/common-styles-responsive.css">
   <link href="css/mst.css" rel="stylesheet" type="text/css" />
   <script src="js/topo_exercise.js"></script> 
 <script src="../../assets/js/instruction-box.js"></script>
