--- a/experiment/kahns-algorithm/simulation/topo_practice.html
+++ b/experiment/kahns-algorithm/simulation/topo_practice.html
@@ -14,7 +14,7 @@
       </ul> 
     </div>
   </div> 
-  <div style="font-size: 1.5vw;">
+  <div>
     <p id="seq"><b>Sorted Order : </b></p>
   </div>      
   <center>   
@@ -35,7 +35,7 @@
 <script src="js/Algo.js"></script> 
 <script src="js/data.js"></script> 
 <link href="docs/static/libs/vis.min.css" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="../../assets/css/common-styles.css">
+<link rel="stylesheet" href="../../assets/css/common-styles-responsive.css">
 <link href="css/mst.css" rel="stylesheet" type="text/css" />
 <script src="js/topo_practice.js"></script> 
 <script src="../../assets/js/instruction-box.js"></script>
